--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "In this challenge, create a web API to manage the following resources: `People` and `Chores`.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/ManSleen/webapi-challenge/issues"
   },
-  "homepage": "https://github.com/ManSleen/webapi-challenge#readme"
+  "homepage": "https://github.com/ManSleen/webapi-challenge#readme",
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
